[gd_scene load_steps=18 format=3 uid="uid://digbqnh1wfi0p"]

[ext_resource type="Script" path="res://scripts/moneda.gd" id="1_hsw8t"]
[ext_resource type="Texture2D" uid="uid://xnkihr6jpj0d" path="res://resources/sprites/coin.png" id="1_t76o0"]
[ext_resource type="AudioStream" uid="uid://b4t6sigqocgtf" path="res://resources/sounds/coin.wav" id="3_piky0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r377e"]
atlas = ExtResource("1_t76o0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e13d"]
atlas = ExtResource("1_t76o0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jypkc"]
atlas = ExtResource("1_t76o0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3qld"]
atlas = ExtResource("1_t76o0")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ar3w"]
atlas = ExtResource("1_t76o0")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g6jc"]
atlas = ExtResource("1_t76o0")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ultbv"]
atlas = ExtResource("1_t76o0")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gsht"]
atlas = ExtResource("1_t76o0")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_25mlj"]
atlas = ExtResource("1_t76o0")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n63q"]
atlas = ExtResource("1_t76o0")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5322q"]
atlas = ExtResource("1_t76o0")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80nji"]
atlas = ExtResource("1_t76o0")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b41vs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r377e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e13d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jypkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3qld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ar3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g6jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ultbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gsht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25mlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n63q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5322q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80nji")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_21iuo"]
radius = 6.0

[node name="moneda" type="Area2D"]
collision_mask = 2
script = ExtResource("1_hsw8t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b41vs")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_21iuo")

[node name="sonidoMoneda" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_piky0")
bus = &"efectos de sonido"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="sonidoMoneda" to="." method="_on_sonido_moneda_finished"]
